--- a/Hire_me_v2/Hire_me_v2.csproj
+++ b/Hire_me_v2/Hire_me_v2.csproj
@@ -84,6 +84,7 @@
     <Content Include="HireMe\Font\fontawesome-webfont.svg" />
     <Content Include="HireMe\Font\glyphicons-halflings-regular.svg" />
     <Content Include="HireMe\Font\index.html" />
+    <Content Include="HireMe\Home.aspx" />
     <Content Include="HireMe\image\blue1.jpg" />
     <Content Include="HireMe\image\casing.jpg" />
     <Content Include="HireMe\image\logo-hire-me.png" />
@@ -140,6 +141,13 @@
   <ItemGroup>
     <Compile Include="HireMe\Class\C_HireMe.cs" />
     <Compile Include="HireMe\Class\Data_Access.cs" />
+    <Compile Include="HireMe\Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HireMe\Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
     <Compile Include="HireMe\Pages-Admin\edite ministry.aspx.cs">
       <DependentUpon>edite ministry.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
