--- a/Hire_me_v2/Web.config
+++ b/Hire_me_v2/Web.config
@@ -24,7 +24,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="tcc_con" connectionString="Data Source=DESKTOP-9TQ6G6V\SQLEXPRESS;Initial Catalog=HireMe2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
-    <!--<add name="tcc_con" connectionString="Data Source=DELL\SQLEXPRESS;Initial Catalog=Hire_Me_Basic;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>-->
+    <!--<add name="tcc_con" connectionString="Data Source=DESKTOP-9TQ6G6V\SQLEXPRESS;Initial Catalog=HireMe2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>-->
+    <add name="tcc_con" connectionString="Data Source=DELL\SQLEXPRESS;Initial Catalog=Hire_Me_Basic;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
 </configuration>
