--- a/Hire_me_v2/Web.config
+++ b/Hire_me_v2/Web.config
@@ -15,6 +15,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime/>
+    <customErrors mode="Off"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.codedom>
@@ -23,8 +24,18 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
+    
+ <system.webServer>
+            <defaultDocument>
+                <files>
+                    <add value="Home.aspx" />
+                </files>
+            </defaultDocument>
+   </system.webServer>
+
   <connectionStrings>
-    <add name="tcc_con" connectionString="Data Source=DESKTOP-9TQ6G6V\SQLEXPRESS;Initial Catalog=HireMe2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
-    <!--<add name="tcc_con" connectionString="Data Source=DELL\SQLEXPRESS;Initial Catalog=Hire_Me_Basic;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>-->
+    <!--<add name="tcc_con" connectionString="Data Source=DESKTOP-9TQ6G6V\SQLEXPRESS;Initial Catalog=HireMe2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient;"/>-->
+    <add name="tcc_con" connectionString="Data Source=DELL\SQLEXPRESS;Initial Catalog=Hire_Me_Basic;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient;"/>
   </connectionStrings>
 </configuration>
